--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
-    "firebase": "^10.12.4",
+    "firebase": "^10.12.5",
+    "firebase-tools": "^13.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
